# naffAI

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  conftest.py  manage.py  pyproject.toml
backend/apps/analytics/: apis.py  selectors.py  urls.py
backend/apps/audit/: apis.py  models.py  selectors.py  services.py  urls.py
backend/apps/audit/migrations/: 0001_initial.py
backend/apps/catalog/: apis.py  imei_service.py  models.py  selectors.py  services.py  urls_channels.py  urls_imei.py
backend/apps/catalog/migrations/: 0001_initial.py
backend/apps/common/: excel.py  exceptions.py  money.py  pagination.py  validators.py
backend/apps/common/tests/: test_validators.py
backend/apps/operators/: apis.py  apps.py  models.py  selectors.py  services.py  urls.py
backend/apps/operators/migrations/: 0001_initial.py
backend/apps/operators/tests/: test_operator_delete.py
backend/apps/payroll/: apis.py  models.py  selectors.py  services.py  urls.py
backend/apps/payroll/migrations/: 0001_initial.py
backend/apps/payroll/tests/: test_payout.py
backend/apps/sales/: apis.py  export_apis.py  models.py  selectors.py  services.py  urls.py
backend/apps/sales/imports/: excel_importer.py
backend/apps/sales/migrations/: 0001_initial.py  (+4 more)
backend/apps/tg_bot/: apps.py  i18n.py  models.py  parser.py  reports.py  runner.py  services.py
backend/apps/users/: apis.py  models.py  permissions.py  urls.py
backend/config/: api_urls.py  urls.py
backend/config/settings/: base.py  dev.py  test.py
backend/scripts/: entrypoint.sh
(+44 files in other folders)
