[project]
name = "naffai-backend"
version = "0.1.0"
description = "Sales tracking & call-center operator management for a phone retail shop"
requires-python = ">=3.12"
dependencies = [
  "django>=5.1,<6.0",
  "djangorestframework>=3.15",
  "django-cors-headers>=4.4",
  "django-filter>=24.3",
  "psycopg[binary]>=3.2",
  "python-decouple>=3.8",
  "gunicorn>=23.0",
  "openpyxl>=3.1",
  "drf-spectacular>=0.27",
  "httpx>=0.27",
  "pydantic>=2.9",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-django>=4.9",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "django-stubs[compatible-mypy]>=5.0",
  "djangorestframework-stubs[compatible-mypy]>=3.15",
  "freezegun>=1.5",
  "factory-boy>=3.3",
]
bot = [
  "aiogram>=3.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["migrations", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "DJ", "RUF"]
# E501 — длинные строки; RUF012 — class-level mutables (DRF permission_classes); RUF001-003 — кириллица в строках/комментариях (UI на русском)
ignore = ["E501", "RUF012", "RUF001", "RUF002", "RUF003"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
ignore_missing_imports = true
check_untyped_defs = true

[tool.django-stubs]
django_settings_module = "config.settings.dev"
